# Pongo

./: .gitignore  CMakeLists.txt  README.md
assets/: Assets.h
assets/Pongo.icon/: icon.json
assets/levels/: menu.json
src/: main.cpp
src/core/: Assets.h  AudioSystem.cpp  AudioSystem.h  Entity.cpp  Entity.h  Game.cpp  Game.h  Layer.cpp  Layer.h  Level.h  ResourceManager.cpp  ResourceManager.h  Utils.h  Window.cpp  Window.h
src/gameplay/Layers/: MainMenu.cpp  MainMenu.h
src/levels/: MainMenu.cpp  MainMenu.h
